# OpenGL

./: .gitignore  CMakeLists.txt  LICENSE
lib/include/glad/: glad.h
src/: glad.c  main.cpp
